fix: fix collapse button breaking anilist when replying to activity and add option to collapse user's own messages

--- a/src/assets/styles/styles.css
+++ b/src/assets/styles/styles.css
@@ -1122,42 +1122,37 @@ body:has(.void-modal-background[open]) {
     display: block;
 }
 
-.void-reply-container {
+/*.activity-replies:has(.void-reply-collapse) {*/
+/*    display: grid;*/
+/*    grid-template-columns: 4px auto;*/
+/*}*/
+
+.reply:has(.void-reply-collapse) {
     display: flex;
-    width: 100%;
-    height: 100%;
-    margin-bottom: 15px;
-    gap: 4px;
-    margin-left: -8px; /* offset collapse button width to avoid replies moving */
+    gap: 8px;
+    padding-left: 8px;
 }
 
-.reply-wrap:has(.void-reply-container) {
-    margin-right: -8px;
+.reply[collapsed=true] {
+    padding-bottom: 14px;
 }
 
-.activity-replies .void-reply-container .reply {
-    flex-grow: 1;
-    margin-bottom: 0;
-}
-
-.reply[collapsed=true] .reply-markdown {
+.reply[collapsed=true] .markdown {
     display: none;
 }
 
 .void-reply-collapse {
     width: 4px;
+    min-width: 4px;
     background-color: rgb(var(--color-blue));
     border-radius: 4px;
-    margin-top: 4px;
-    margin-bottom: 4px;
-    padding-left: 4px;
     cursor: pointer;
     align-self: stretch;
     opacity: 0;
     transition: opacity 0.2s ease;
 }
 
-.void-reply-container:hover .void-reply-collapse {
+.reply:hover .void-reply-collapse {
     opacity: 1;
 }
 
